--- a/src/components/navigation/_style.scss
+++ b/src/components/navigation/_style.scss
@@ -6,7 +6,7 @@
 	.container {
 		max-width: $w-lg;
 		margin: 0 auto;
-		padding: 12px 16px 13px 16px;
+		padding: 0 16px 0 16px;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: flex-start;
@@ -19,10 +19,38 @@
 	&.show {
 		display: block !important;
 	}
+	nav {
+		display: flex;
+		flex-direction: column;
+		a {
+			color: $primary-dark;
+			text-decoration: none;
+			font-size: 1.125rem;
+			padding-top: 1rem;
+			padding-bottom: 1rem;
+			&:hover {
+				text-decoration: underline;
+			}
+			&:focus {
+				outline: 2px solid $secondary;
+			}
+		}
+	}
+
 }
+
 
 @media (min-width: 768px) {
 	.navigation {
-		display: block !important;
+		display: block;
+		nav {flex-direction:row;
+		a {
+			padding-right: 2.3rem;
+			padding-left: 5px;
+			font-size: 1rem;
+			padding-top: 10px;
+			padding-bottom: 13px;
+		}
+		}
 	}
 }
