--- a/src/components/navigation/navigation.html
+++ b/src/components/navigation/navigation.html
@@ -2,6 +2,12 @@
 <div class="navigation">
     <div class="container">
         <nav>
+            <a href="https://online.bcc.ca.gov/bcc/customization/bcc/cap/licenseSearch.aspx">Bureau of Cannabis Control Licensing</a>
+
+            <a href="https://aca6.accela.com/CALCANNABIS/Cap/CapHome.aspx?module=Licenses">CalCannabis Cultivation Licensing</a>
+
+            <a href="https://www.cdph.ca.gov/Programs/CEH/DFDCS/MCSB/Pages/licensesearch.aspx">Manufactured Cannabis Safety Branch Licensing</a>
+
             <a href="/">Home</a>
         </nav>
     </div>
