--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,10 +1,10 @@
 // Design System Variables
 //colors
-$primary: #004abc;
-$primary-dark: #1e1569;
+$primary: #2f4c2c;
+$primary-dark: #064e66;
 $primary-light: #ccdbf2;
 $secondary: #fec02f;
-$secondary-dark: #ff8000;
+$secondary-dark: #cf5d28;
 $secondary-light: #fff2d5;
 $gray-100: #f9f9fa;
 $gray-200: #ededef;
